welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:5: error: not found: type i
  	{x = x + nums[i]}
                      ^averageValue:5: error: value nums of type Array[Int] does not take type parameters.
  	{x = x + nums[i]}
                     ^